技术组件-concurrency-调整